--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
     background-color: rgb(85, 2, 161);
 }
+body{-webkit-text-stroke-color: antiquewhite;}
 /* liverpool maior da inglaterra */
