--- a/style.css
+++ b/style.css
@@ -10,4 +10,4 @@ body{
     background-color: var(--roxo);
 }
 body{-webkit-text-stroke-color: antiquewhite;}
-/* liverpool maior da inglaterra */
+/* milan>>>>liverpool */
