--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 
 body{
     background-color: var(--roxo);
+
+    margin: 1cm;
 }
 body{-webkit-text-stroke-color: antiquewhite;}
 /* milan>>>>liverpool */
