--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@
 }
 
 
-
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
 
 body{
     background-color: var(--roxo);
