--- a/style.css
+++ b/style.css
@@ -9,7 +9,12 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-around;
+
+    img src="./aiaiai2.jpg" alt="shrek emo"
+    width: 20%;
 }
+
+
 
 body{
     background-color: var(--roxo);
