--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ text-align: center;
 
 .Fotos{
     display: grid;
-    grid-template-columns: 20% 20% 20% 40%;
+    grid-template-columns: 20% 20% 20%;
 
 }
 
