--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400..700;1,400..700&display=swap');
+
 :root{
     --roxo:#3d2f8b;
 --branco:#FFFFFF
@@ -12,15 +14,7 @@ header{
 
     img src="./aiaiai2.jpg" alt="shrek emo"
     width: 20%;
-    // <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 400 to 700
-
-.cuprum-<uniquifier> {
-  font-family: "Cuprum", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-}
+  
 }
 
 
