--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ header{
 
 body{
     background-color: var(--roxo);
+    font-family: "Cuprum", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
 
     margin: 1cm;
 }
