--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400..700;1,400..700&display=swap');
 
 :root{
-    --roxo:#3d2f8b;
+    --roxo:#110846;
 --branco:#FFFFFF;
 }
 
