--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header{
 
 
 body{
-    background-color: var(--preto;)
+    background-color: var(--preto);
     font-family: "Cuprum", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
