--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ img{
 }
 
 .textos{
-padding: 9px 9px;
+color: red;
+text-align: center;
 }
 
 .equipe{  
@@ -58,7 +59,6 @@ text-align: center;
 .Integrante{
     width: 80%;
 }
-
 
 
 
