--- a/style.css
+++ b/style.css
@@ -67,11 +67,14 @@ text-align: center;
     margin: 0;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 0;
 }
 .red{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: red;
+    padding: 10px 0;
 }
 
 
