--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ text-align: center;
     justify-content: space-between;
     align-items: center;
     padding: 10px 0;
+    color: red;
 }
 .red{
     display: flex;
