--- a/style.css
+++ b/style.css
@@ -62,6 +62,9 @@ text-align: center;
     width: 100%;
 }
 
+header{
+    margin: 0;
+}
 .part{
     display: flex;
     margin: 0;
@@ -76,6 +79,8 @@ text-align: center;
     align-items: center;
     background-color: red;
     padding: 10px 0;
+    margin: 0 30px;
+    margin-bottom: 40px;
 }
 
 
